unity/native/papi-python/include/PesapiPythonImpl.h

pesapi_value pesapi_create_int32(pesapi_env env, int32_t value);
pesapi_value pesapi_create_boolean(pesapi_env env, int value);
pesapi_value pesapi_create_string_utf8(pesapi_env env, const char* str, size_t length);
pesapi_value pesapi_create_double(pesapi_env env, double value);
pesapi_value pesapi_create_array(pesapi_env env);
pesapi_value pesapi_create_object(pesapi_env env);
pesapi_value pesapi_create_null(pesapi_env env);
pesapi_value pesapi_create_undefined(pesapi_env env);
pesapi_value pesapi_create_uint32(pesapi_env env, uint32_t value);
pesapi_value pesapi_create_int64(pesapi_env env, int64_t value);
pesapi_value pesapi_create_uint64(pesapi_env env, uint64_t value);
pesapi_value pesapi_create_string_utf16(pesapi_env env, const uint16_t* str, size_t length);
pesapi_value pesapi_create_binary(pesapi_env env, void* data, size_t length);
pesapi_value pesapi_create_function(pesapi_env env, pesapi_callback native_impl, void* data, pesapi_function_finalize finalize);
pesapi_value pesapi_create_class(pesapi_env env, const void* type_id);
double pesapi_get_value_double(pesapi_env env, pesapi_value value);
uint32_t pesapi_get_array_length(pesapi_env env, pesapi_value value);
int pesapi_is_null(pesapi_env env, pesapi_value value);
int pesapi_is_boolean(pesapi_env env, pesapi_value value);
int pesapi_is_int32(pesapi_env env, pesapi_value value);
int pesapi_get_value_bool(pesapi_env env, pesapi_value value);
int32_t pesapi_get_value_int32(pesapi_env env, pesapi_value value);
uint32_t pesapi_get_value_uint32(pesapi_env env, pesapi_value value);
int64_t pesapi_get_value_int64(pesapi_env env, pesapi_value value);
uint64_t pesapi_get_value_uint64(pesapi_env env, pesapi_value value);
int pesapi_is_undefined(pesapi_env env, pesapi_value value);
int pesapi_is_string(pesapi_env env, pesapi_value value);
int pesapi_is_object(pesapi_env env, pesapi_value value);
int pesapi_is_function(pesapi_env env, pesapi_value value);
int pesapi_is_binary(pesapi_env env, pesapi_value value);
int pesapi_is_array(pesapi_env env, pesapi_value value);
int pesapi_is_uint32(pesapi_env env, pesapi_value value);
int pesapi_is_int64(pesapi_env env, pesapi_value value);
int pesapi_is_uint64(pesapi_env env, pesapi_value value);
int pesapi_is_double(pesapi_env env, pesapi_value value);
pesapi_value pesapi_native_object_to_value(pesapi_env env, const void* type_id, void* object_ptr, int call_finalize);
void* pesapi_get_native_object_ptr(pesapi_env env, pesapi_value value);
const void* pesapi_get_native_object_typeid(pesapi_env env, pesapi_value value);
int pesapi_is_instance_of(pesapi_env env, const void* type_id, pesapi_value value);
pesapi_scope pesapi_open_scope(pesapi_env_ref env_ref);